force-app/main/default/objects/ProductPlantAssociation__c/ProductPlantAssociation__c.object-meta.xml
<CustomObject>
    <label>Product Plant Association</label>
    <nameField>
        <label>Plant Location Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Plant Associations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>