force-app/main/default/objects/ProductPlantAssociation__c/fields/Average_Weight__c.field-meta.xml
<CustomField>
    <fullName>Average_Weight__c</fullName>
    <label>Average Weight</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>