force-app/main/default/objects/ProductPlantAssociation__c/fields/CargillProduct__c.field-meta.xml
<CustomField>
    <fullName>CargillProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cargill Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Plant_Location_Products_del</relationshipName>
    <type>Lookup</type>
</CustomField>