force-app/main/default/objects/ProductPlantAssociation__c/fields/External_id__c.field-meta.xml
<CustomField>
    <fullName>External_id__c</fullName>
    <externalId>true</externalId>
    <label>External id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>