force-app/main/default/objects/ProductPlantAssociation__c/fields/LegacyRecord_ID__c.field-meta.xml
<CustomField>
    <fullName>LegacyRecord_ID__c</fullName>
    <label>Legacy Record ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>