force-app/main/default/objects/ProductPlantAssociation__c/fields/Pieces_Per_Box__c.field-meta.xml
<CustomField>
    <fullName>Pieces_Per_Box__c</fullName>
    <label>Pieces Per Box</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>