force-app/main/default/objects/ProductPlantAssociation__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant</label>
    <referenceTo>Plant__c</referenceTo>
    <relationshipLabel>Product Plant Associations</relationshipLabel>
    <relationshipName>Plant_Location_Products</relationshipName>
    <type>Lookup</type>
</CustomField>