force-app/main/default/objects/ProductPlantAssociation__c/fields/PlantAlias__c.field-meta.xml
<CustomField>
    <fullName>PlantAlias__c</fullName>
    <formula>Plant__r.Plant_Alias__c</formula>
    <label>Plant Alias</label>
    <type>Text</type>
</CustomField>