force-app/main/default/objects/ProductPlantAssociation__c/fields/Priced_By_Pound__c.field-meta.xml
<CustomField>
    <fullName>Priced_By_Pound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Priced By Pound</label>
    <type>Checkbox</type>
</CustomField>