force-app/main/default/objects/ProductPlantAssociation__c/fields/Product_Avail_Delay__c.field-meta.xml
<CustomField>
    <fullName>Product_Avail_Delay__c</fullName>
    <label>Product Avail Delay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>