force-app/main/default/objects/ProductPlantAssociation__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <formula>CargillProduct__r.ProductCode</formula>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>